--- a/index.html
+++ b/index.html
@@ -22,7 +22,11 @@
     </header>
 
     <section class="main-visual">
-      <img src="sample3-assets/mv.jpg" alt="メインビジュアル" />
+      <img
+        src="sample3-assets/mv.jpg"
+        alt="メインイメージ"
+        class="main-image"
+      />
       <div class="info-container">
         <div class="navy-style h3-container">
           <h3>重要なお知らせ</h3>
@@ -82,12 +86,14 @@
 
     <section class="business-products-section">
       <div class="background-square1"></div>
-      <div class="side-image-container">
-        <img
-          src="sample3-assets/business.jpg"
-          alt="事業内容"
-          class="side-image"
-        />
+      <div class="side-container">
+        <div class="side-image-container">
+          <img
+            src="sample3-assets/business.jpg"
+            alt="事業内容"
+            class="side-image"
+          />
+        </div>
         <div class="side-content">
           <h2 class="medium-headline">事業内容</h2>
           <p>
@@ -99,7 +105,7 @@
           </div>
         </div>
       </div>
-      <div class="side-image-container right-justify">
+      <div class="side-container right-justify">
         <div class="side-content">
           <h2 class="medium-headline">製品情報</h2>
           <p>
@@ -110,11 +116,13 @@
             <div class="Arrow-Right"></div>
           </div>
         </div>
-        <img
-          src="sample3-assets/products.jpg"
-          alt="事業内容"
-          class="side-image"
-        />
+        <div class="side-image-container">
+          <img
+            src="sample3-assets/products.jpg"
+            alt="製品情報"
+            class="side-image"
+          />
+        </div>
       </div>
     </section>
 
@@ -207,13 +215,15 @@
         <hr />
         <div class="footer-below-container">
           <nav>
-            <ul>
-              <li class="nav-item">当社の強み</li>
-              <li class="nav-item">事業内容</li>
-              <li class="nav-item">製品情報</li>
-              <li class="nav-item">会社案内</li>
-              <li class="nav-item">採用情報</li>
-              <li class="nav-item">お問い合わせ</li>
+            <ul class="footer-menu">
+              <li class="nav-item footer-nav-item padding-left-0">
+                当社の強み
+              </li>
+              <li class="nav-item footer-nav-item">事業内容</li>
+              <li class="nav-item footer-nav-item">製品情報</li>
+              <li class="nav-item footer-nav-item">会社案内</li>
+              <li class="nav-item footer-nav-item">採用情報</li>
+              <li class="nav-item footer-nav-item">お問い合わせ</li>
             </ul>
           </nav>
           <span class="copyright">©くり工業株式会社.</span>
