--- a/index.html
+++ b/index.html
@@ -4,12 +4,16 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link rel="stylesheet" href="CSS/main.css" />
+    <link rel="stylesheet" href="CSS/menu.css" />
     <title>くり工業株式会社</title>
   </head>
   <body>
     <header>
       <h1>くり工業株式会社</h1>
-      <nav>
+      <div id="hamburger-btn">
+        <span class="bun"></span>
+      </div>
+      <nav id="nav-menu">
         <ul class="header-nav-list">
           <li class="nav-item">当社の強み</li>
           <li class="nav-item">事業内容</li>
@@ -230,5 +234,7 @@
         </div>
       </div>
     </footer>
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/2.2.4/jquery.min.js"></script>
+    <script src="js/main.js"></script>
   </body>
 </html>
