Feat: Add menu link

--- a/index.html
+++ b/index.html
@@ -9,23 +9,35 @@
   </head>
   <body>
     <header>
-      <h1>くり工業株式会社</h1>
+      <h1><a href="#" id="top-link">くり工業株式会社</a></h1>
       <div id="hamburger-btn">
         <span class="bun"></span>
       </div>
       <nav id="nav-menu">
         <ul class="header-nav-list">
-          <li class="nav-item">当社の強み</li>
-          <li class="nav-item">事業内容</li>
-          <li class="nav-item">製品情報</li>
-          <li class="nav-item">会社案内</li>
-          <li class="nav-item">採用情報</li>
-          <li class="nav-item nav-highlight">お問い合わせ</li>
+          <li class="nav-item menu-item">
+            <a href="#" id="strength-link" class="menu-link">当社の強み</a>
+          </li>
+          <li class="nav-item menu-item">
+            <a href="#" id="business-link" class="menu-link">事業内容</a>
+          </li>
+          <li class="nav-item menu-item">
+            <a href="#" id="product-link" class="menu-link">製品情報</a>
+          </li>
+          <li class="nav-item menu-item">
+            <a href="#" id="company-link" class="menu-link">会社案内</a>
+          </li>
+          <li class="nav-item menu-item">
+            <a href="#" id="recruit-link" class="menu-link">採用情報</a>
+          </li>
+          <li class="nav-item menu-item nav-highlight">
+            <a href="#" id="contact-link" class="menu-link">お問い合わせ</a>
+          </li>
         </ul>
       </nav>
     </header>
 
-    <section class="main-visual">
+    <section id="top" class="main-visual">
       <img
         src="sample3-assets/mv.jpg"
         alt="メインイメージ"
@@ -45,7 +57,7 @@
       </div>
     </section>
 
-    <section class="strength-section">
+    <section id="strength" class="strength-section">
       <div class="background-square1"></div>
       <div class="background-square2"></div>
       <h2 class="large-headline">当社の強み</h2>
@@ -91,7 +103,7 @@
     <section class="business-products-section">
       <div class="background-square1"></div>
       <div class="side-container">
-        <div class="side-image-container">
+        <div id="business" class="side-image-container">
           <img
             src="sample3-assets/business.jpg"
             alt="事業内容"
@@ -109,7 +121,7 @@
           </div>
         </div>
       </div>
-      <div class="side-container right-justify">
+      <div id="product" class="side-container right-justify">
         <div class="side-content">
           <h2 class="medium-headline">製品情報</h2>
           <p>
@@ -134,13 +146,13 @@
       <div class="background-square1"></div>
       <div class="background-square2"></div>
       <div class="image-title-container">
-        <div class="image-title-item">
+        <div id="company" class="image-title-item">
           <img src="sample3-assets/company.jpg" alt="" />
           <div class="image-text-container">
             <h3 class="medium-headline">会社案内</h3>
           </div>
         </div>
-        <div class="image-title-item">
+        <div id="recruit" class="image-title-item">
           <img src="sample3-assets/recruitment.jpg" alt="" />
           <div class="image-text-container">
             <h3 class="medium-headline">採用情報</h3>
@@ -197,7 +209,7 @@
       </div>
     </section>
 
-    <section class="contact-section">
+    <section id="contact" class="contact-section">
       <div class="contact-container">
         <h2 class="large-headline">お問い合わせ</h2>
         <div class="h2-subheadline">CONTACT</div>
