Doc: Update sentences

--- a/index.html
+++ b/index.html
@@ -5,11 +5,11 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link rel="stylesheet" href="CSS/main.css" />
     <link rel="stylesheet" href="CSS/menu.css" />
-    <title>くり工業株式会社</title>
+    <title>刈谷工業株式会社</title>
   </head>
   <body>
     <header>
-      <h1><a href="#" id="top-link">くり工業株式会社</a></h1>
+      <h1><a href="#" id="top-link">刈谷工業株式会社</a></h1>
       <div id="hamburger-btn">
         <span class="bun"></span>
       </div>
@@ -48,10 +48,8 @@
           <h3>重要なお知らせ</h3>
         </div>
         <div class="text-container">
-          <time>2020/00/00</time>
-          <p>
-            お知らせが入ります。お知らせが入ります。お知らせが入ります。お知らせが入ります。
-          </p>
+          <time>2020/02/15</time>
+          <p>コーポレートサイトをリニューアルオープンしました。</p>
           <div class="Arrow-Right"></div>
         </div>
       </div>
@@ -67,30 +65,30 @@
           <img src="sample3-assets/strengths1.jpg" alt="強み1" />
           <div class="strength-title">
             <div class="bullet"></div>
-            <h3 class="medium-headline">タイトルが入ります</h3>
+            <h3 class="medium-headline">徹底した品質管理</h3>
           </div>
           <p>
-            テキストが入ります。テキストが入ります。テキストが入ります。テキストが入ります。テキストが入ります。テキストが入ります。テキストが入ります。
+            弊社の製品は、厳しい基準で品質管理を徹底しております。高い品質だからこそ実現できる製品を提供しております。
           </p>
         </div>
         <div class="strength-item">
           <img src="sample3-assets/strengths2.jpg" alt="強み2" />
           <div class="strength-title">
             <div class="bullet"></div>
-            <h3 class="medium-headline">タイトルが入ります</h3>
+            <h3 class="medium-headline">ニーズに合ったご提案</h3>
           </div>
           <p>
-            テキストが入ります。テキストが入ります。テキストが入ります。テキストが入ります。テキストが入ります。テキストが入ります。テキストが入ります。
+            お客様ひとりひとりのニーズに合わせて、製品をご提案させていただきます。既製品はもちろん、ニーズに合わせた製品のカスタマイズも対応しております。
           </p>
         </div>
         <div class="strength-item">
           <img src="sample3-assets/strengths3.jpg" alt="強み3" />
           <div class="strength-title">
             <div class="bullet"></div>
-            <h3 class="medium-headline">タイトルが入ります</h3>
+            <h3 class="medium-headline">積極的な研究開発</h3>
           </div>
           <p>
-            テキストが入ります。テキストが入ります。テキストが入ります。テキストが入ります。テキストが入ります。テキストが入ります。テキストが入ります。
+            弊社では、研究開発に力を入れております。他社では実現できない技術も保有しておりますので、ぜひ一度ご相談ください。
           </p>
         </div>
       </div>
@@ -113,7 +111,7 @@
         <div class="side-content">
           <h2 class="medium-headline">事業内容</h2>
           <p>
-            本文が入ります。本文が入ります。本文が入ります。本文が入ります。本文が入ります。本文が入ります。本文が入ります。本文が入ります。本文が入ります。本文が入ります。本文が入ります。本文が入ります。本文が入ります。本文が入ります。本文が入ります。
+            弊社は1993年の創業以来、機械部品の製造でメーカ様のサポートを行っております。製造以外にも、設計委託/開発委託も行っており、幅広い分野で製造業をサポートします。
           </p>
           <div class="detail-btn">
             詳しく見る
@@ -125,7 +123,7 @@
         <div class="side-content">
           <h2 class="medium-headline">製品情報</h2>
           <p>
-            本文が入ります。本文が入ります。本文が入ります。本文が入ります。本文が入ります。本文が入ります。本文が入ります。本文が入ります。本文が入ります。本文が入ります。本文が入ります。本文が入ります。本文が入ります。本文が入ります。本文が入ります。
+            弊社はスクリュ、ワッシャ、ナットなどのネジ類の部品を主に扱っております。他にも、板金やジグなどの製品も製造しております。
           </p>
           <div class="detail-btn">
             詳しく見る
@@ -167,38 +165,30 @@
         <div class="h2-subheadline">NEWS</div>
         <div class="news-contents">
           <div class="news-item text-container">
-            <time>2020/00/00</time>
-            <p class="underline">
-              ニュースタイトルが入ります。ニュースタイトルが入ります。ニュースタイトルが入ります。
-            </p>
+            <time>2020/02/15</time>
+            <p class="underline">弊社の強み、企業情報などを更新しました。</p>
             <div class="Arrow-Right"></div>
           </div>
           <div class="news-item text-container">
-            <time>2020/00/00</time>
+            <time>2020/02/15</time>
             <p>
-              ニュースタイトルが入ります。ニュースタイトルが入ります。ニュースタイトルが入ります。
+              コーポレートサイトをリニューアルオープンしました。スマートフォンなどのデバイスに対応しました。
             </p>
             <div class="Arrow-Right"></div>
           </div>
           <div class="news-item text-container">
-            <time>2020/00/00</time>
-            <p class="underline">
-              ニュースタイトルが入ります。ニュースタイトルが入ります。
-            </p>
+            <time>2020/02/11</time>
+            <p class="underline">製品情報を更新しました。</p>
             <div class="Arrow-Right"></div>
           </div>
           <div class="news-item text-container">
-            <time>2020/00/00</time>
-            <p>
-              ニュースタイトルが入ります。ニュースタイトルが入ります。ニュースタイトルが入ります。ニュースタイトルが入ります。
-            </p>
+            <time>2020/02/09</time>
+            <p>採用情報を更新しました。</p>
             <div class="Arrow-Right"></div>
           </div>
           <div class="news-item text-container">
-            <time>2020/00/00</time>
-            <p>
-              ニュースタイトルが入ります。ニュースタイトルが入ります。ニュースタイトルが入ります。
-            </p>
+            <time>2020/02/08</time>
+            <p>コーポレートサイトをオープンしました。</p>
             <div class="Arrow-Right"></div>
           </div>
         </div>
@@ -227,7 +217,7 @@
 
     <footer>
       <div class="footer-container">
-        <h2>くり工業株式会社</h2>
+        <h2>刈谷工業株式会社</h2>
         <hr />
         <div class="footer-below-container">
           <nav>
@@ -242,7 +232,7 @@
               <li class="nav-item footer-nav-item">お問い合わせ</li>
             </ul>
           </nav>
-          <span class="copyright">©くり工業株式会社.</span>
+          <span class="copyright">©刈谷工業株式会社.</span>
         </div>
       </div>
     </footer>
